# Server-Properties-Editor-For-Calagopus

./: LICENSE  Metadata.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs  models.rs
backend/src/routes/: admin.rs  client.rs  client_server.rs  mod.rs
backend/src/services/: mod.rs  properties.rs  settings.rs
frontend/: package.json
frontend/src/: eggGate.ts  index.ts
frontend/src/api/: client.ts
frontend/src/pages/: AdminServerPropertiesPage.tsx  ServerPropertiesPage.tsx
frontend/src/types/: index.ts
migrations/20260627010000_server_properties_init/: down.sql  up.sql
