[package]
name = "com_subwaystudios_serverproperties"
description = "Server Properties - a GUI editor for a Minecraft server's server.properties file."
authors = ["subwaystudios"]
version = "1.0.0"
edition = { workspace = true }

[dependencies]
shared = { workspace = true }
wings-api = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
garde = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
uuid = { workspace = true }
compact_str = { workspace = true }
tokio = { workspace = true }
